# create-python-script

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: badges.yml  cd.yml  ci.yml  pr.yml  python-package.yml  test.yml
create-python-script/: project_generator.py
create-script/: cli.py
create_python_project/: constants.py  project_generator.py
create_python_project/templates/script/{{cookiecutter.project_slug}}/: .env.example  .flake8  .gitignore  README.md  pyproject.toml
create_python_project/templates/script/{{cookiecutter.project_slug}}/script/: main.py
create_python_project/templates/script/{{cookiecutter.project_slug}}/tests/: test.py
pyplater/: cli.py
pyplater-cli/tests/: test_cli.py  test_tree.py
pyplater/sections/sqlalchemy/db/: crud.py
pyplater/snippets/cython/: setup.py
pyplater/templates/base/fastapi/{{cookiecutter.project_slug}}/: .flake8  README.md
pyplater/templates/base/fastapi/{{cookiecutter.project_slug}}/app/: main.py
pyplater/templates/base/scripting/{{cookiecutter.project_slug}}/: .flake8
pyplater/templates/base/vanilla/{{cookiecutter.project_slug}}/{{cookircutter.project_slug}}/: config.py
pyplater/templates/fastapi/{{cookiecutter.project_slug}}/: .env.example  pyproject.toml
pyplater/templates/fastapi/{{cookiecutter.project_slug}}/app/: main.py
pyplater/templates/fastapi/{{cookiecutter.project_slug}}/app/db/: database.py
pyplater/templates/manager/poetry/: pyproject.toml
pyplater/templates/manager/scripting/pip/: pyproject.toml
pyplater/templates/manager/scripting/poetry/: pyproject.toml
pyplater/templates/orm/sqlalchemy/db/: model.py  shcema.py
pyplater/templates/script/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
pyplater/templates/scripting/{{cookiecutter.project_slug}}/: pyproject.toml
pyplater/templates/starter/{{cookiecutter.project_slug}}/: .flake8  README.md  pyproject.toml
pyplater/templates/starter/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  main.py
pyplater/templates/vanilla/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_project.py
pyplater/tests/: test_cli.py  test_questionary.py
pyplater/utils/: constants.py  questionary.py  tree.py
pyplater_cli/: cli.py  main.py
pyplater_cli/groups/: delete.py  edit.py  git.py  insert.py  save.py  view.py
pyplater_cli/pyplater-templates/templates/new/: cookiecutter.json
pyplater_cli/pyplater-templates/templates/new/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
pyplater_cli/tests/: test_cli.py  test_delete.py  test_questionary.py  test_tree.py
pyplater_cli/utils/: git.py  helpers.py  questionary.py
pyplater_cli/utils/classes/: Git.py
