[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"

[tool.poetry.scripts]
script = 'script:main'
test = 'unittest:main'

[build]
script = "main.py"