[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"

[build]
include = ["script/**/*.py"]

[pyplater.scripts]
script = "poetry run python ./script/main.py"
test = "poetry run python -m unittest discover test"
lint = "poetry run flake8"
format = "poetry run black . -v"
install = "poetry install"
install-dev = "peotry install group -dev"
