[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "23.3.0"
pytest = "7.4.0"
coverage = "7.2.7"

[tool.poetry.script]
your_script = "{{cookiecutter.project_slug}}.main:{{cookiecutter.project_slug}}"

[build]
include = ["{{cookiecutter.project_slug}}/**/*.py"]

[pyplater.scripts]
script = "poetry run ./{{cookiecutter.project_slug}}/main.py"
test = "poetry run pytest"
lint = "poetry run flake8"
coverage = "poetry run coverage run -m pytest"
report = "poetry run coverage report"
format = "poetry run black . -v"
install = "poetry install"
install-dev = "poetry install group -dev"